--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="Commitheria is an open organization aimed at providing tools, popular or not, managed by volunteers in order to avoid all types of content that could be bothersome for users.">
         <meta name="keywords" content="Commitheria, MAT Services, online tools, free services, online documentation, help, support">
         <meta name="author" content="MAT Services & Co">
-        <link id="style-id" rel="stylesheet" href="/MDS1.css" onload="showPage()">
+        <link id="style-id" rel="stylesheet" href="/MDS1.css">
     </head>
     <body>
         <header id="Bar"></header>
