--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Commitheria</title>
+        <title>Officeheria</title>
         <link rel="icon" type="image/x-icon" href="favicon.png"></link>
         <link rel="stylesheet" href="styles.css">
         <script src="https://mat-services.github.io/HttpReq.js"></script>
