--- a/bar.htm
+++ b/bar.htm
@@ -1,2 +1,4 @@
-<img src="favicon.png" alt="" style="width: 50px; height: 50px;">
-<h1>Officeheria</h1>
+<h1 class="bartxt">
+    <img src="favicon.png" alt="" style="width: 50px; height: 50px;">
+    <h1>Officeheria</h1>
+</h1>
